--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>DawgsHaus</title>
   <meta name="description" content="DawgsHaus — web apps, mobile apps, and AI agents." />
   <style>
-    :root { color-scheme: dark; }
+    :root { color-scheme: dark; --mx: 50%; --my: 30%; }
+
     html, body { height: 100%; margin: 0; }
     body{
       font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
@@ -14,6 +15,7 @@
       color: #b6ffda;
       overflow: hidden;
     }
+
     .scanlines::before{
       content:"";
       position: fixed; inset: 0;
@@ -26,20 +28,60 @@
       pointer-events:none;
       mix-blend-mode: overlay;
       opacity: .35;
+      z-index: 3;
     }
+
+    /* Mouse-reactive glow */
     .glow{
       position: fixed; inset: 0;
-      background: radial-gradient(600px 300px at 50% 30%, rgba(34,197,94,.18), transparent 65%);
+      background:
+        radial-gradient(650px 320px at var(--mx) var(--my), rgba(34,197,94,.22), transparent 65%);
       pointer-events:none;
-      filter: blur(8px);
+      filter: blur(10px);
       opacity: .9;
+      z-index: 0;
     }
+
+    /* Gentle glow pulse */
+    @keyframes pulseGlow { 0%,100% { opacity: .72; } 50% { opacity: 1; } }
+    .glow { animation: pulseGlow 6s ease-in-out infinite; }
+
+    /* Matrix rain layer */
+    .rain{
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      overflow: hidden;
+      opacity: .20;              /* subtle */
+      mix-blend-mode: screen;
+      z-index: 1;
+    }
+    .rain span{
+      position: absolute;
+      top: -30%;
+      width: 14px;
+      color: rgba(82,255,184,.9);
+      text-shadow: 0 0 10px rgba(34,197,94,.35);
+      font-size: 14px;
+      line-height: 14px;
+      white-space: pre;
+      animation: fall linear infinite;
+      filter: blur(.15px);
+    }
+    @keyframes fall {
+      from { transform: translateY(-30%); }
+      to   { transform: translateY(140%); }
+    }
+
     .wrap{
       height: 100%;
       display: grid;
       place-items: center;
       padding: 24px;
+      position: relative;
+      z-index: 2; /* above rain */
     }
+
     .card{
       width: min(820px, 92vw);
       border: 1px solid rgba(34,197,94,.25);
@@ -47,12 +89,15 @@
       box-shadow: 0 0 36px rgba(34,197,94,.12);
       border-radius: 14px;
       padding: 26px 26px 22px;
+      backdrop-filter: blur(2px);
     }
+
     .top{
       display:flex; gap:14px; align-items:center; justify-content:space-between;
       border-bottom: 1px dashed rgba(34,197,94,.25);
       padding-bottom: 14px; margin-bottom: 16px;
     }
+
     .badge{
       font-size: 12px;
       letter-spacing: .12em;
@@ -62,18 +107,21 @@
       border-radius: 999px;
       text-transform: uppercase;
     }
+
     h1{
       margin: 0;
       font-size: clamp(26px, 4.4vw, 44px);
       letter-spacing: .04em;
       text-shadow: 0 0 18px rgba(34,197,94,.22);
     }
+
     .prompt{
       margin: 14px 0 0;
       font-size: 14px;
       color: rgba(182,255,218,.9);
       line-height: 1.6;
     }
+
     .cmd{
       margin-top: 14px;
       padding: 14px 14px;
@@ -81,6 +129,7 @@
       border: 1px solid rgba(34,197,94,.20);
       background: rgba(0,0,0,.45);
     }
+
     .cursor{
       display:inline-block;
       width: 10px;
@@ -91,27 +140,82 @@
       transform: translateY(2px);
     }
     @keyframes blink { 50% { opacity: 0; } }
+
     a{
       color: #52ffb8;
       text-decoration: none;
       border-bottom: 1px dashed rgba(82,255,184,.45);
     }
     a:hover{ border-bottom-style: solid; }
+
     .links{
       display:flex; gap:16px; flex-wrap: wrap;
       margin-top: 14px;
       font-size: 14px;
       opacity: .95;
     }
+
     .footer{
       margin-top: 18px;
       font-size: 12px;
       opacity: .7;
     }
+
+    /* Boot sequence overlay (runs once per load) */
+    .boot {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, .88);
+      display: grid;
+      place-items: center;
+      z-index: 5; /* above everything */
+      transition: opacity 700ms ease;
+    }
+    .boot.hidden { opacity: 0; pointer-events: none; }
+
+    .bootBox{
+      width: min(860px, 92vw);
+      border: 1px solid rgba(34,197,94,.22);
+      border-radius: 14px;
+      background: rgba(0,0,0,.55);
+      padding: 18px 18px 14px;
+      box-shadow: 0 0 38px rgba(34,197,94,.10);
+    }
+    .bootTitle{
+      color: rgba(182,255,218,.95);
+      letter-spacing: .08em;
+      font-size: 12px;
+      text-transform: uppercase;
+      margin-bottom: 10px;
+      opacity: .9;
+    }
+    .bootLines{
+      font-size: 13px;
+      line-height: 1.6;
+      color: rgba(182,255,218,.9);
+      white-space: pre-wrap;
+    }
+
+    /* Accessibility */
+    @media (prefers-reduced-motion: reduce) {
+      .glow, .rain span, .cursor { animation: none !important; }
+      .boot { display: none !important; }
+    }
   </style>
 </head>
+
 <body class="scanlines">
   <div class="glow"></div>
+  <div class="rain" id="rain"></div>
+
+  <!-- Boot intro -->
+  <div class="boot" id="boot">
+    <div class="bootBox">
+      <div class="bootTitle">dawgshaus :: init</div>
+      <div class="bootLines" id="bootLines"></div>
+    </div>
+  </div>
+
   <div class="wrap">
     <div class="card">
       <div class="top">
@@ -125,8 +229,11 @@
       <div class="cmd">
         <div>$ whoami</div>
         <div>techdawgs</div>
+
         <div style="margin-top:10px;">$ status</div>
-        <div>shipping code • deploying demos • training agents<span class="cursor"></span></div>
+        <div>
+          <span id="statusText"></span><span class="cursor"></span>
+        </div>
       </div>
 
       <div class="links">
@@ -141,7 +248,158 @@
   </div>
 
   <script>
+    // Footer year
     document.getElementById("y").textContent = new Date().getFullYear();
+
+    // ===== Matrix rain (subtle, lightweight) =====
+    const rain = document.getElementById("rain");
+    const glyphs = "0123456789abcdefアイウエオカキクケコｱｲｳｴｵﾊﾋﾌﾍﾎ";
+    const maxColumns = 34;
+
+    function buildRain() {
+      rain.innerHTML = "";
+      const columns = Math.min(maxColumns, Math.max(16, Math.floor(window.innerWidth / 42)));
+
+      for (let i = 0; i < columns; i++) {
+        const span = document.createElement("span");
+        const length = Math.floor(12 + Math.random() * 26);
+        let text = "";
+        for (let j = 0; j < length; j++) {
+          text += glyphs[Math.floor(Math.random() * glyphs.length)] + "\n";
+        }
+        span.textContent = text;
+
+        span.style.left = (i / columns) * 100 + "%";
+        span.style.animationDuration = (8 + Math.random() * 10) + "s";
+        span.style.animationDelay = (-Math.random() * 10) + "s";
+        span.style.fontSize = (12 + Math.random() * 4) + "px";
+        span.style.opacity = (0.10 + Math.random() * 0.22).toFixed(2);
+
+        rain.appendChild(span);
+      }
+    }
+
+    buildRain();
+    window.addEventListener("resize", () => {
+      clearTimeout(window.__rainResize);
+      window.__rainResize = setTimeout(buildRain, 250);
+    });
+
+    // ===== Mouse-reactive glow =====
+    // Subtle: only updates when mouse is moving, and eases naturally via CSS blur.
+    const root = document.documentElement;
+    let glowRAF = null;
+    let targetX = 0.5, targetY = 0.3;
+
+    window.addEventListener("mousemove", (e) => {
+      targetX = e.clientX / window.innerWidth;
+      targetY = e.clientY / window.innerHeight;
+
+      if (!glowRAF) {
+        glowRAF = requestAnimationFrame(() => {
+          root.style.setProperty("--mx", Math.round(targetX * 100) + "%");
+          root.style.setProperty("--my", Math.round(targetY * 100) + "%");
+          glowRAF = null;
+        });
+      }
+    }, { passive: true });
+
+    // ===== Animated typing for status line =====
+    const statusEl = document.getElementById("statusText");
+    const phrases = [
+      "shipping code • deploying demos • training agents",
+      "building web apps • building mobile apps • building agents",
+      "pushing commits • testing builds • iterating fast",
+      "connecting ideas • automating workflows • shipping"
+    ];
+
+    let phraseIndex = 0;
+    let charIndex = 0;
+    let deleting = false;
+
+    function tickTyping() {
+      const current = phrases[phraseIndex];
+
+      if (!deleting) {
+        charIndex++;
+        statusEl.textContent = current.slice(0, charIndex);
+        if (charIndex >= current.length) {
+          deleting = true;
+          setTimeout(tickTyping, 1200);
+          return;
+        }
+      } else {
+        charIndex--;
+        statusEl.textContent = current.slice(0, charIndex);
+        if (charIndex <= 0) {
+          deleting = false;
+          phraseIndex = (phraseIndex + 1) % phrases.length;
+        }
+      }
+
+      const speed = deleting ? 22 : 34;
+      setTimeout(tickTyping, speed);
+    }
+
+    // ===== Boot sequence intro (runs once per load) =====
+    const boot = document.getElementById("boot");
+    const bootLinesEl = document.getElementById("bootLines");
+
+    const bootLines = [
+      "booting dawgshaus kernel v0.1 …",
+      "mount /apps -> ready",
+      "mount /agents -> ready",
+      "link github.remote -> ok",
+      "dns route -> verified",
+      "encryption layer -> active",
+      "status -> ONLINE",
+      "",
+      "press any key to continue …"
+    ];
+
+    function typeBoot(lines, onDone) {
+      let line = 0;
+      let col = 0;
+
+      function step() {
+        if (line >= lines.length) { onDone(); return; }
+
+        const text = lines[line];
+        if (col <= text.length) {
+          const before = lines.slice(0, line).join("\n");
+          const current = text.slice(0, col);
+          bootLinesEl.textContent = (before ? before + "\n" : "") + current;
+          col++;
+          setTimeout(step, 18 + Math.random() * 20);
+        } else {
+          line++;
+          col = 0;
+          setTimeout(step, 90);
+        }
+      }
+
+      step();
+    }
+
+    function finishBoot() {
+      boot.classList.add("hidden");
+      setTimeout(() => boot.remove(), 900);
+      // start status typing after boot fades
+      tickTyping();
+    }
+
+    // Allow skipping boot on key/click
+    function skipBoot() {
+      if (!boot || boot.classList.contains("hidden")) return;
+      finishBoot();
+    }
+    window.addEventListener("keydown", skipBoot, { once: true });
+    window.addEventListener("pointerdown", skipBoot, { once: true });
+
+    // Start boot typing, then fade out automatically
+    typeBoot(bootLines, () => {
+      setTimeout(finishBoot, 450);
+    });
   </script>
 </body>
 </html>
