--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       overflow: hidden;
     }
 
+    /* Scanlines */
     .scanlines::before{
       content:"";
       position: fixed; inset: 0;
@@ -28,68 +29,66 @@
       pointer-events:none;
       mix-blend-mode: overlay;
       opacity: .35;
-      z-index: 3;
+      z-index: 6;
     }
 
-    /* Mouse-reactive glow */
+    /* Mouse-reactive glow (subtle) */
     .glow{
       position: fixed; inset: 0;
-      background:
-        radial-gradient(650px 320px at var(--mx) var(--my), rgba(34,197,94,.22), transparent 65%);
+      background: radial-gradient(650px 320px at var(--mx) var(--my), rgba(34,197,94,.18), transparent 65%);
       pointer-events:none;
-      filter: blur(10px);
-      opacity: .9;
-      z-index: 0;
+      filter: blur(12px);
+      opacity: .85;
+      z-index: 1;
     }
+    @keyframes pulseGlow { 0%,100% { opacity: .70; } 50% { opacity: .95; } }
+    .glow { animation: pulseGlow 7s ease-in-out infinite; }
 
-    /* Gentle glow pulse */
-    @keyframes pulseGlow { 0%,100% { opacity: .72; } 50% { opacity: 1; } }
-    .glow { animation: pulseGlow 6s ease-in-out infinite; }
-
-    /* Matrix rain layer */
+    /* Matrix rain layer (ASCII only to avoid translation prompt) */
     .rain{
       position: fixed;
       inset: 0;
       pointer-events: none;
       overflow: hidden;
-      opacity: .20;              /* subtle */
-      mix-blend-mode: screen;
-      z-index: 1;
+      opacity: .26;              /* slightly more visible */
+      z-index: 2;                /* above glow, below content */
     }
     .rain span{
       position: absolute;
       top: -30%;
       width: 14px;
-      color: rgba(82,255,184,.9);
-      text-shadow: 0 0 10px rgba(34,197,94,.35);
+      color: rgba(82,255,184,.78);
+      text-shadow: 0 0 10px rgba(34,197,94,.20);
       font-size: 14px;
       line-height: 14px;
       white-space: pre;
       animation: fall linear infinite;
-      filter: blur(.15px);
+      filter: blur(.12px);
     }
     @keyframes fall {
       from { transform: translateY(-30%); }
       to   { transform: translateY(140%); }
     }
 
+    /* Main layout */
     .wrap{
       height: 100%;
       display: grid;
       place-items: center;
       padding: 24px;
       position: relative;
-      z-index: 2; /* above rain */
+      z-index: 4; /* above glow + rain */
     }
 
     .card{
       width: min(820px, 92vw);
       border: 1px solid rgba(34,197,94,.25);
-      background: rgba(0,0,0,.55);
+      background: rgba(0,0,0,.58);
       box-shadow: 0 0 36px rgba(34,197,94,.12);
       border-radius: 14px;
       padding: 26px 26px 22px;
       backdrop-filter: blur(2px);
+      position: relative;
     }
 
     .top{
@@ -130,14 +129,16 @@
       background: rgba(0,0,0,.45);
     }
 
+    /* Cursor: remove “glow” vibe (no neon block) */
     .cursor{
       display:inline-block;
       width: 10px;
-      background: rgba(34,197,94,.9);
-      margin-left: 6px;
-      animation: blink 1s steps(1) infinite;
       height: 1em;
+      margin-left: 6px;
       transform: translateY(2px);
+      background: rgba(182,255,218,.65); /* softer */
+      box-shadow: none;                  /* no glow */
+      animation: blink 1.1s steps(1) infinite;
     }
     @keyframes blink { 50% { opacity: 0; } }
 
@@ -161,14 +162,14 @@
       opacity: .7;
     }
 
-    /* Boot sequence overlay (runs once per load) */
+    /* ===== Cinematic boot overlay ===== */
     .boot {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, .88);
+      background: rgba(0, 0, 0, .90);
       display: grid;
       place-items: center;
-      z-index: 5; /* above everything */
+      z-index: 8;
       transition: opacity 700ms ease;
     }
     .boot.hidden { opacity: 0; pointer-events: none; }
@@ -177,26 +178,53 @@
       width: min(860px, 92vw);
       border: 1px solid rgba(34,197,94,.22);
       border-radius: 14px;
-      background: rgba(0,0,0,.55);
+      background: rgba(0,0,0,.58);
       padding: 18px 18px 14px;
-      box-shadow: 0 0 38px rgba(34,197,94,.10);
+      box-shadow: 0 0 46px rgba(34,197,94,.10);
+      position: relative;
+      overflow: hidden;
     }
+
+    /* glitch flicker */
+    .bootBox::after{
+      content:"";
+      position:absolute; inset:0;
+      background: linear-gradient(120deg, transparent 0%, rgba(82,255,184,.08) 45%, transparent 55%);
+      opacity: 0;
+      pointer-events:none;
+    }
+    .bootBox.glitch::after{
+      opacity: 1;
+      animation: glitchSweep 220ms linear 1;
+    }
+    @keyframes glitchSweep {
+      from { transform: translateX(-30%); }
+      to   { transform: translateX(30%); }
+    }
+
     .bootTitle{
       color: rgba(182,255,218,.95);
-      letter-spacing: .08em;
+      letter-spacing: .10em;
       font-size: 12px;
       text-transform: uppercase;
       margin-bottom: 10px;
       opacity: .9;
     }
+
     .bootLines{
       font-size: 13px;
-      line-height: 1.6;
+      line-height: 1.65;
       color: rgba(182,255,218,.9);
       white-space: pre-wrap;
     }
 
-    /* Accessibility */
+    .bootHint{
+      margin-top: 10px;
+      font-size: 12px;
+      opacity: .65;
+    }
+
+    /* Accessibility: respect reduced motion */
     @media (prefers-reduced-motion: reduce) {
       .glow, .rain span, .cursor { animation: none !important; }
       .boot { display: none !important; }
@@ -210,9 +238,10 @@
 
   <!-- Boot intro -->
   <div class="boot" id="boot">
-    <div class="bootBox">
+    <div class="bootBox" id="bootBox">
       <div class="bootTitle">dawgshaus :: init</div>
       <div class="bootLines" id="bootLines"></div>
+      <div class="bootHint">click or press any key to skip</div>
     </div>
   </div>
 
@@ -231,16 +260,11 @@
         <div>techdawgs</div>
 
         <div style="margin-top:10px;">$ status</div>
-        <div>
-          <span id="statusText"></span><span class="cursor"></span>
-        </div>
+        <div>shipping code • deploying demos • training agents<span class="cursor"></span></div>
       </div>
 
       <div class="links">
         <a href="https://github.com/techdawgs" target="_blank" rel="noreferrer">GitHub</a>
-        <!-- Add these later -->
-        <!-- <a href="/projects">Projects</a> -->
-        <!-- <a href="/labs">Labs</a> -->
       </div>
 
       <div class="footer">© <span id="y"></span> DawgsHaus</div>
@@ -251,29 +275,30 @@
     // Footer year
     document.getElementById("y").textContent = new Date().getFullYear();
 
-    // ===== Matrix rain (subtle, lightweight) =====
+    // ===== Matrix rain (ASCII only) =====
     const rain = document.getElementById("rain");
-    const glyphs = "0123456789abcdefアイウエオカキクケコｱｲｳｴｵﾊﾋﾌﾍﾎ";
-    const maxColumns = 34;
+    const glyphs = "01abcdef6789$#%*+-=<>[]{}()";
+    const maxColumns = 36;
 
     function buildRain() {
       rain.innerHTML = "";
-      const columns = Math.min(maxColumns, Math.max(16, Math.floor(window.innerWidth / 42)));
+      const columns = Math.min(maxColumns, Math.max(18, Math.floor(window.innerWidth / 40)));
 
       for (let i = 0; i < columns; i++) {
         const span = document.createElement("span");
-        const length = Math.floor(12 + Math.random() * 26);
+        const length = Math.floor(14 + Math.random() * 28);
         let text = "";
+
         for (let j = 0; j < length; j++) {
           text += glyphs[Math.floor(Math.random() * glyphs.length)] + "\n";
         }
         span.textContent = text;
 
         span.style.left = (i / columns) * 100 + "%";
-        span.style.animationDuration = (8 + Math.random() * 10) + "s";
+        span.style.animationDuration = (7 + Math.random() * 11) + "s";
         span.style.animationDelay = (-Math.random() * 10) + "s";
         span.style.fontSize = (12 + Math.random() * 4) + "px";
-        span.style.opacity = (0.10 + Math.random() * 0.22).toFixed(2);
+        span.style.opacity = (0.10 + Math.random() * 0.28).toFixed(2);
 
         rain.appendChild(span);
       }
@@ -286,7 +311,6 @@
     });
 
     // ===== Mouse-reactive glow =====
-    // Subtle: only updates when mouse is moving, and eases naturally via CSS blur.
     const root = document.documentElement;
     let glowRAF = null;
     let targetX = 0.5, targetY = 0.3;
@@ -304,102 +328,124 @@
       }
     }, { passive: true });
 
-    // ===== Animated typing for status line =====
-    const statusEl = document.getElementById("statusText");
-    const phrases = [
-      "shipping code • deploying demos • training agents",
-      "building web apps • building mobile apps • building agents",
-      "pushing commits • testing builds • iterating fast",
-      "connecting ideas • automating workflows • shipping"
-    ];
-
-    let phraseIndex = 0;
-    let charIndex = 0;
-    let deleting = false;
-
-    function tickTyping() {
-      const current = phrases[phraseIndex];
-
-      if (!deleting) {
-        charIndex++;
-        statusEl.textContent = current.slice(0, charIndex);
-        if (charIndex >= current.length) {
-          deleting = true;
-          setTimeout(tickTyping, 1200);
-          return;
-        }
-      } else {
-        charIndex--;
-        statusEl.textContent = current.slice(0, charIndex);
-        if (charIndex <= 0) {
-          deleting = false;
-          phraseIndex = (phraseIndex + 1) % phrases.length;
-        }
-      }
-
-      const speed = deleting ? 22 : 34;
-      setTimeout(tickTyping, speed);
-    }
-
-    // ===== Boot sequence intro (runs once per load) =====
+    // ===== Cinematic boot sequence (with decryption + glitch flicker) =====
     const boot = document.getElementById("boot");
     const bootLinesEl = document.getElementById("bootLines");
+    const bootBox = document.getElementById("bootBox");
 
-    const bootLines = [
-      "booting dawgshaus kernel v0.1 …",
-      "mount /apps -> ready",
-      "mount /agents -> ready",
-      "link github.remote -> ok",
-      "dns route -> verified",
-      "encryption layer -> active",
-      "status -> ONLINE",
-      "",
-      "press any key to continue …"
+    // small glitch “hit”
+    function glitch() {
+      bootBox.classList.add("glitch");
+      setTimeout(() => bootBox.classList.remove("glitch"), 240);
+    }
+
+    function randHex(n) {
+      const chars = "0123456789abcdef";
+      let out = "";
+      for (let i = 0; i < n; i++) out += chars[(Math.random() * chars.length) | 0];
+      return out;
+    }
+
+    const phases = [
+      { label: "booting dawgshaus kernel v0.2 …", glitch: false },
+      { label: "mount /apps -> ready", glitch: false },
+      { label: "mount /agents -> ready", glitch: false },
+      { label: "link github.remote -> ok", glitch: false },
+      { label: "handshake tls -> pending", glitch: true },
+
+      // Decryption phase (cinematic)
+      { label: "decrypting payload [stage 1/3] …", glitch: true, decrypt: 22 },
+      { label: "decrypting payload [stage 2/3] …", glitch: true, decrypt: 28 },
+      { label: "decrypting payload [stage 3/3] …", glitch: true, decrypt: 34 },
+
+      { label: "dns route -> verified", glitch: false },
+      { label: "encryption layer -> active", glitch: false },
+      { label: "status -> ONLINE", glitch: true },
+      { label: "", glitch: false },
+      { label: "press any key to continue …", glitch: false }
     ];
 
-    function typeBoot(lines, onDone) {
-      let line = 0;
-      let col = 0;
+    function appendLine(text) {
+      bootLinesEl.textContent += (bootLinesEl.textContent ? "\n" : "") + text;
+    }
 
-      function step() {
-        if (line >= lines.length) { onDone(); return; }
+    function typeLine(text, speedMin=14, speedMax=28) {
+      return new Promise((resolve) => {
+        let i = 0;
+        const timer = () => {
+          bootLinesEl.textContent += text[i] || "";
+          i++;
+          if (i <= text.length) {
+            setTimeout(timer, speedMin + Math.random() * (speedMax - speedMin));
+          } else {
+            resolve();
+          }
+        };
+        timer();
+      });
+    }
 
-        const text = lines[line];
-        if (col <= text.length) {
-          const before = lines.slice(0, line).join("\n");
-          const current = text.slice(0, col);
-          bootLinesEl.textContent = (before ? before + "\n" : "") + current;
-          col++;
-          setTimeout(step, 18 + Math.random() * 20);
+    function decryptBurst(chars=24, bursts=10) {
+      return new Promise((resolve) => {
+        let count = 0;
+        const go = () => {
+          if (count === 0) appendLine(""); // new line for the burst
+          // replace last line with random “cipher”
+          const lines = bootLinesEl.textContent.split("\n");
+          lines[lines.length - 1] = randHex(chars);
+          bootLinesEl.textContent = lines.join("\n");
+
+          if (count % 2 === 0) glitch();
+          count++;
+
+          if (count < bursts) {
+            setTimeout(go, 55 + Math.random() * 55);
+          } else {
+            resolve();
+          }
+        };
+        go();
+      });
+    }
+
+    async function runBoot() {
+      bootLinesEl.textContent = "";
+
+      for (const p of phases) {
+        // new line
+        if (p.glitch) glitch();
+
+        // type the label
+        if (p.label) {
+          if (bootLinesEl.textContent) bootLinesEl.textContent += "\n";
+          await typeLine(p.label, 12, 24);
         } else {
-          line++;
-          col = 0;
-          setTimeout(step, 90);
+          appendLine("");
         }
-      }
 
-      step();
+        // decryption animation after label
+        if (p.decrypt) {
+          await decryptBurst(p.decrypt, 12);
+          // finalize decrypted line
+          appendLine("decryption -> ok");
+        }
+
+        // small pause between lines
+        await new Promise(r => setTimeout(r, 90 + Math.random() * 120));
+      }
     }
 
     function finishBoot() {
+      if (!boot || boot.classList.contains("hidden")) return;
       boot.classList.add("hidden");
       setTimeout(() => boot.remove(), 900);
-      // start status typing after boot fades
-      tickTyping();
     }
 
-    // Allow skipping boot on key/click
-    function skipBoot() {
-      if (!boot || boot.classList.contains("hidden")) return;
-      finishBoot();
-    }
+    function skipBoot() { finishBoot(); }
     window.addEventListener("keydown", skipBoot, { once: true });
     window.addEventListener("pointerdown", skipBoot, { once: true });
 
-    // Start boot typing, then fade out automatically
-    typeBoot(bootLines, () => {
-      setTimeout(finishBoot, 450);
-    });
+    runBoot().then(() => setTimeout(finishBoot, 450));
   </script>
 </body>
 </html>
