--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
     /* Cursor: remove “glow” vibe (no neon block) */
     .cursor{
       display:inline-block;
-      width: 2px;
+      width: 0;
       height: 1em;
       margin-left: 6px;
-      transform: translateY(2px);
-      background: rgba(182,255,218,.75);
+      border-left: 2px solid rgba(182,255,218,.8);
       box-shadow: none;
+      background: none;
       animation: blink 1.1s steps(1) infinite;
     }
 
@@ -464,7 +464,7 @@
     window.addEventListener("keydown", skipBoot, { once: true });
     window.addEventListener("pointerdown", skipBoot, { once: true });
 
-    rrunBoot().then(() => {
+    runBoot().then(() => {
       // Boot fully ran. Do NOT auto-continue.
       // Wait for key/click to dismiss.
       bootLinesEl.textContent += ""; // no-op, just explicit
