--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DawgsHaus — About</title>
   <meta name="description" content="About DawgsHaus." />
+
+  <!-- Shared nav -->
+  <link rel="stylesheet" href="/assets/site-nav.css">
+  <script src="/assets/site-nav.js" defer></script>
+
   <style>
     :root{
       --bg:#0b0f14;
@@ -41,9 +46,6 @@
       gap:16px; flex-wrap:wrap;
     }
     .brand h1{ margin:0; font-size:30px; letter-spacing:0.3px; }
-    .nav{ display:flex; gap:14px; font-size:14px; color:var(--muted); }
-    .nav a{ color:var(--muted); }
-    .nav a:hover{ color:var(--text); text-decoration:none; }
     .sub{
       margin-top:10px;
       color:var(--muted);
@@ -75,16 +77,12 @@
   </style>
 </head>
 <body>
+  <div id="site-nav"></div>
+
   <header>
     <div class="wrap">
       <div class="brand">
         <h1>DawgsHaus — About</h1>
-        <nav class="nav" aria-label="Primary">
-          <a href="/">Home</a>
-          <a href="/projects/">Projects</a>
-          <a href="/about/">About</a>
-          <a href="/contact/">Contact</a>
-        </nav>
       </div>
       <p class="sub">
         Placeholder page for DawgsHaus. This will evolve into the “why,” the mission, and the structure behind the projects.
